Create properties files