@@ -9,16 +9,10 @@ package nl.naturalis.nda.export.dwca;
 import static nl.naturalis.nda.elasticsearch.load.NDAIndexManager.LUCENE_TYPE_SPECIMEN;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
-import java.io.FileReader;
 import java.io.IOException;
-import java.io.InputStream;
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Enumeration;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Properties;
@@ -32,7 +26,6 @@ import javax.xml.bind.JAXBException;
 import javax.xml.bind.Marshaller;
 import javax.xml.bind.Unmarshaller;
 
-import nl.naturalis.nda.domain.Specimen;
 import nl.naturalis.nda.elasticsearch.client.IndexNative;
 import nl.naturalis.nda.elasticsearch.dao.estypes.ESSpecimen;
 import nl.naturalis.nda.elasticsearch.load.LoadUtil;
@@ -57,6 +50,8 @@ public class DwCAExporter
 	private static final String dwcUrlTdwgOrg = "http://rs.tdwg.org/dwc/terms/";
 	private static final String zipExtension = ".zip";
 	private static final String MAPPING_FILE_NAME = "Specimen.properties";
+	CsvFileWriter.CsvRow headerRow = null;
+	static String outputdirectory = null;
 
 	/**
 	 * @param args
@@ -67,17 +62,30 @@ public class DwCAExporter
 
 		logger.info("-----------------------------------------------------------------");
 		logger.info("Start");
+        
+		/* Create NBA Directory */
+		StringUtilities.createOutPutDirectory(); 
 
-		String zipfilename = args[0];
-		String namecollectiontype = args[1];
-		String totalsize = args[2];
+		/* Get the arguments: "OutPut", "Size", "Mammalia" */
+		
+		/* args[1] get the total records from ElasticSearch  */
+		String totalsize = StringUtilities.readPropertyvalue(args[0], args[1]);
+		/* args[2] Get the Collectionname */
+		String namecollectiontype = StringUtilities.readPropertyvalue(args[2], "Collectiontype");
+				
+		/* Output directory for the files EML.xml, Meta.xml and Ocurrence.txt */
+		outputdirectory = StringUtilities.readPropertyvalue(args[0], "Directory") + "/";
 
+		/* Get the directory and zipfilename */
+		String zipfilename = outputdirectory + namecollectiontype;
+		
 		IndexNative index = new IndexNative(LoadUtil.getESClient(), LoadUtil.getConfig().required(
 				"elasticsearch.index.name"));
 		try
 		{
 			DwCAExporter exp = new DwCAExporter(index);
-			boolean success = (new File(csvOutPutFile)).delete();
+			/* Delete the CSV file if Exists */
+			boolean success = (new File(outputdirectory + csvOutPutFile)).delete();
 			if (success)
 			{
 				System.out.println("The file " + csvOutPutFile + " has been successfully deleted");
@@ -100,162 +108,7 @@ public class DwCAExporter
 
 	public void ExportDwca(String zipFileName, String namecollectiontype, String totalsize) throws Exception
 	{
-		// before we open the file check to see if it already exists
-		// boolean alreadyExists = new File(csvOutPutFile).exists();
-
-		// CsvFileWriter fileWriter = new CsvFileWriter(csvOutPutFile);
-		// List<ESSpecimen> list = index.getResultsList(LUCENE_TYPE_SPECIMEN,
-		// namecollectiontype,
-		// Integer.parseInt(totalsize), ESSpecimen.class);
-		//
-		// /* Create the CSV file */
-		// CsvFileWriter.CsvRow headerRow = fileWriter.new CsvRow();
-		// headerRow.add("UnitID");
-		// headerRow.add("UnitGUID");
-		// headerRow.add("CollectorsFieldNumber");
-		// headerRow.add("AssemblageID");
-		// headerRow.add("SourceInstitutionID");
-		// headerRow.add("SourceID");
-		// headerRow.add("Owner");
-		// headerRow.add("LicenceType");
-		// headerRow.add("Licence");
-		// headerRow.add("RecordBasis");
-		// headerRow.add("KindOfUnit");
-		// headerRow.add("CollectionType");
-		// headerRow.add("TypeStatus");
-		// headerRow.add("Sex");
-		// headerRow.add("PhaseOrStage");
-		// headerRow.add("Titles");
-		// headerRow.add("Notes");
-		// headerRow.add("PreparationType");
-		// headerRow.add("NumberOfSpecimen");
-		// headerRow.add("FromCaptivity");
-		// headerRow.add("ObjectPublic");
-		// headerRow.add("MultiMediaPublic");
-		// headerRow.add("AcquiredFrom"); // ToDo
-		// headerRow.add("ProjectTitle");
-		// headerRow.add("WorldRegion");
-		// headerRow.add("Continent");
-		// headerRow.add("Country");
-		// headerRow.add("ISO3166Code");
-		// headerRow.add("ProvinceState");
-		// headerRow.add("Island");
-		// headerRow.add("Locality");
-		// headerRow.add("City");
-		// headerRow.add("Sublocality");
-		// headerRow.add("LocalityText");
-		// headerRow.add("DateTimeBegin");
-		// headerRow.add("DateTimeEnd");
-		// headerRow.add("Method");
-		// headerRow.add("Altitude");
-		// headerRow.add("AltitudeUnifOfMeasurement");
-		// headerRow.add("Depth");
-		// headerRow.add("depthUnitOfMeasurement");
-		// headerRow.add("FullName");
-		// headerRow.add("GatheringOrganizations");
-		// headerRow.add("LongitudeDecimal");
-		// headerRow.add("LatitudeDecimal");
-		//
-		// /**
-		// * adding header row
-		// */
-		// fileWriter.WriteRow(headerRow);
-		//
-		// for (ESSpecimen specimen : list)
-		// {
-		// CsvFileWriter.CsvRow dataRow = fileWriter.new CsvRow();
-		// dataRow.add(specimen.getUnitID());
-		// dataRow.add(specimen.getUnitGUID());
-		// dataRow.add(specimen.getCollectorsFieldNumber());
-		// dataRow.add(specimen.getAssemblageID());
-		// dataRow.add(specimen.getSourceInstitutionID());
-		// dataRow.add(specimen.getSourceID());
-		// dataRow.add(specimen.getOwner());
-		// dataRow.add(specimen.getLicenceType());
-		// dataRow.add(specimen.getLicence());
-		// dataRow.add(specimen.getRecordBasis());
-		// dataRow.add(specimen.getKindOfUnit());
-		// dataRow.add(specimen.getCollectionType());
-		// dataRow.add(specimen.getTypeStatus());
-		// dataRow.add(specimen.getSex());
-		// dataRow.add(specimen.getPhaseOrStage());
-		// dataRow.add(specimen.getTitle());
-		// dataRow.add(specimen.getNotes());
-		// dataRow.add(specimen.getPreparationType());
-		// dataRow.add(Integer.toString(specimen.getNumberOfSpecimen()));
-		// dataRow.add(String.valueOf(specimen.isFromCaptivity()));
-		// dataRow.add(Boolean.toString(specimen.isObjectPublic()));
-		// dataRow.add(Boolean.toString(specimen.isMultiMediaPublic()));
-		// if (specimen.getAcquiredFrom() != null)
-		// {
-		// dataRow.add(specimen.getAcquiredFrom().getAgentText());
-		// }
-		// dataRow.add(specimen.getGatheringEvent().getProjectTitle());
-		// dataRow.add(specimen.getGatheringEvent().getWorldRegion());
-		// dataRow.add(specimen.getGatheringEvent().getContinent());
-		// dataRow.add(specimen.getGatheringEvent().getCountry());
-		// dataRow.add(specimen.getGatheringEvent().getIso3166Code());
-		// dataRow.add(specimen.getGatheringEvent().getProvinceState());
-		// dataRow.add(specimen.getGatheringEvent().getIsland());
-		// dataRow.add(specimen.getGatheringEvent().getLocality());
-		// dataRow.add(specimen.getGatheringEvent().getCity());
-		// dataRow.add(specimen.getGatheringEvent().getSublocality());
-		// dataRow.add(specimen.getGatheringEvent().getLocalityText());
-		// if (specimen.getGatheringEvent().getDateTimeBegin() != null)
-		// {
-		// SimpleDateFormat datetimebegin = new SimpleDateFormat("yyyy-MM-dd");
-		// String datebegin =
-		// datetimebegin.format(specimen.getGatheringEvent().getDateTimeBegin());
-		// dataRow.add(datebegin);
-		// }
-		// if (specimen.getGatheringEvent().getDateTimeEnd() != null)
-		// {
-		// SimpleDateFormat datetimenend = new SimpleDateFormat("yyyy-MM-dd");
-		// String dateEnd =
-		// datetimenend.format(specimen.getGatheringEvent().getDateTimeEnd());
-		// dataRow.add(dateEnd);
-		// }
-		// dataRow.add(specimen.getGatheringEvent().getMethod());
-		// dataRow.add(specimen.getGatheringEvent().getAltitude());
-		// dataRow.add(specimen.getGatheringEvent().getAltitudeUnifOfMeasurement());
-		// dataRow.add(specimen.getGatheringEvent().getDepth());
-		// dataRow.add(specimen.getGatheringEvent().getDepthUnitOfMeasurement());
-		// if (specimen.getGatheringEvent().getGatheringPersons() != null)
-		// {
-		// dataRow.add(specimen.getGatheringEvent().getGatheringPersons().iterator().next()
-		// .getFullName());
-		// }
-		// if (specimen.getGatheringEvent().getGatheringOrganizations() != null)
-		// {
-		// dataRow.add(specimen.getGatheringEvent().getGatheringOrganizations().iterator().next()
-		// .getName());
-		// }
-		// if (specimen.getGatheringEvent().getSiteCoordinates() != null)
-		// {
-		// if
-		// (specimen.getGatheringEvent().getSiteCoordinates().iterator().next().getLatitudeDecimal()
-		// != null)
-		// {
-		// dataRow.add(Double.toString(specimen.getGatheringEvent().getSiteCoordinates().iterator()
-		// .next().getLatitudeDecimal()));
-		// }
-		// if
-		// (specimen.getGatheringEvent().getSiteCoordinates().iterator().next().getLongitudeDecimal()
-		// != null)
-		// {
-		// dataRow.add(Double.toString(specimen.getGatheringEvent().getSiteCoordinates().iterator()
-		// .next().getLongitudeDecimal()));
-		// }
-		// }
-		//
-		// /**
-		// * adding data row
-		// */
-		// fileWriter.WriteRow(dataRow);
-		// }
-		// fileWriter.close();
-
-		printHeaderRowForCSV(namecollectiontype, totalsize);
+		printHeaderRowAndDataForCSV(namecollectiontype, totalsize);
 
 		Files files = new Files();
 		files.setLocation("occurence.txt");
@@ -273,16 +126,15 @@ public class DwCAExporter
 		cores.setId(id);
 
 		/* Create field index, term Atrribute */
-		// Integer cnt = new Integer(0);
-		// Iterator<String> fieldIter = headerRow.iterator();
-		// while (fieldIter.hasNext())
-		// {
-		// cnt = Integer.valueOf(cnt.intValue() + 1);
-		// Field field = new Field(cnt.toString(), dwcUrlTdwgOrg +
-		// fieldIter.next());
-		// cores.addField(field);
-		//
-		// }
+		Integer cnt = new Integer(0);
+		Iterator<String> fieldIter = headerRow.iterator();
+		while (fieldIter.hasNext())
+		{
+			cnt = Integer.valueOf(cnt.intValue() + 1);
+			Field field = new Field(cnt.toString(), dwcUrlTdwgOrg + fieldIter.next());
+			cores.addField(field);
+
+		}
 
 		/* Create Meta.xml file for NBA */
 		Meta xmlspecimen = new Meta();
@@ -310,7 +162,7 @@ public class DwCAExporter
 		{
 			JAXBContext context = JAXBContext.newInstance(Meta.class);
 			Unmarshaller un = context.createUnmarshaller();
-			Meta xmlspecimen = (Meta) un.unmarshal(new File(FILE_NAME_META));
+			Meta xmlspecimen = (Meta) un.unmarshal(new File(outputdirectory + FILE_NAME_META));
 			return xmlspecimen;
 		} catch (JAXBException e)
 		{
@@ -329,7 +181,7 @@ public class DwCAExporter
 			m.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
 
 			// Write to File
-			m.marshal(meta, new File(FILE_NAME_META));
+			m.marshal(meta, new File(outputdirectory + FILE_NAME_META));
 			m.marshal(meta, System.out);
 
 		} catch (JAXBException e)
@@ -446,7 +298,7 @@ public class DwCAExporter
 			 * marshaling of java objects in xml (output to file and standard
 			 * output)
 			 */
-			jaxbMarshaller.marshal(eml, new File(FILE_NAME_EML));
+			jaxbMarshaller.marshal(eml, new File(outputdirectory + FILE_NAME_EML));
 			jaxbMarshaller.marshal(eml, System.out);
 
 		} catch (JAXBException e)
@@ -464,9 +316,9 @@ public class DwCAExporter
 			FileOutputStream fos = new FileOutputStream(zipfilename);
 			ZipOutputStream zos = new ZipOutputStream(fos);
 
-			StringUtilities.addToZipFile(FILE_NAME_META, zos);
-			StringUtilities.addToZipFile(FILE_NAME_EML, zos);
-			StringUtilities.addToZipFile(csvOutPutFile, zos);
+			StringUtilities.addToZipFile(outputdirectory + FILE_NAME_META, zos);
+			StringUtilities.addToZipFile(outputdirectory + FILE_NAME_EML, zos);
+			StringUtilities.addToZipFile(outputdirectory + csvOutPutFile, zos);
 
 			zos.close();
 			fos.close();
@@ -481,69 +333,51 @@ public class DwCAExporter
 		}
 	}
 
-	private void printHeaderRowForCSV(String namecollectiontype, String totalsize)
+	private void printHeaderRowAndDataForCSV(String namecollectiontype, String totalsize)
 	{
-		CsvFileWriter filewriter;
-		Properties prop = new Properties();
-		InputStream inputStream = null;
+		CsvFileWriter filewriter = null;
 		try
-		{
-			inputStream = getClass().getClassLoader().getResourceAsStream(MAPPING_FILE_NAME);
-			filewriter = new CsvFileWriter(csvOutPutFile);
+		{ /* Create new CSV File object and output File */
+			filewriter = new CsvFileWriter(outputdirectory + csvOutPutFile);
+			/* Get the result from ElasticSearch */
 			List<ESSpecimen> list = index.getResultsList(LUCENE_TYPE_SPECIMEN, namecollectiontype,
 					Integer.parseInt(totalsize), ESSpecimen.class);
 
-			CsvFileWriter.CsvRow headerRow = filewriter.new CsvRow();
-			if (inputStream == null)
+			headerRow = filewriter.new CsvRow();
+
+			Properties configFile = new Properties();
+			try
+			{ /* load the values from the properties file */
+				configFile.load(getClass().getClassLoader().getResourceAsStream(MAPPING_FILE_NAME));
+			} catch (IOException e)
 			{
 				System.out.println("property file '" + MAPPING_FILE_NAME + "' not found in the classpath");
 				return;
 			}
-			prop.load(inputStream);
-
-			// Enumeration<?> enuKeys = prop.keys();
-			// while (enuKeys.hasMoreElements())
-			// {
-			// String key = (String) enuKeys.nextElement();
-			// String value = prop.getProperty(key);
-			// headerRow.add(value);
-			// Collections.sort(headerRow);
-			// }
-
-			// Properties configFile = new Properties();
-			// try
-			// {
-			// configFile.load(getClass().getClassLoader().getResourceAsStream(MAPPING_FILE_NAME));
-			// Enumeration<?> e = configFile.keys();
-			// while (e.hasMoreElements())
-			// {
-			// String key = (String) e.nextElement();
-			// System.out.println(key);
-			// }
-			//
-			// } catch (IOException e) {
-			// e.printStackTrace();
-			// }
-
-			Properties configFile = new Properties();
-			configFile.load(getClass().getClassLoader().getResourceAsStream(MAPPING_FILE_NAME));
-			SortedMap sortedSystemProperties = new TreeMap(configFile);
-			Set keySet = sortedSystemProperties.keySet();
+			/* Sort the value from the properties file when loaded */
+			SortedMap<Object, Object> sortedSystemProperties = new TreeMap<Object, Object>(configFile);
+			Set<?> keySet = sortedSystemProperties.keySet();
 			Iterator<?> iterator = keySet.iterator();
 			while (iterator.hasNext())
 			{
 				String propertyName = (String) iterator.next();
 				String propertyValue = configFile.getProperty(propertyName);
+				/* Add the headers to the CSV File */
 				headerRow.add(propertyValue);
 				System.out.println(propertyName + ": " + propertyValue);
 			}
 
+			/* Write the headers columns */
 			filewriter.WriteRow(headerRow);
 
+			/* Add the value from ElasticSearch to the CSV File */
 			for (ESSpecimen specimen : list)
 			{
 				CsvFileWriter.CsvRow dataRow = filewriter.new CsvRow();
-				dataRow.add(specimen.getUnitID());
+				if (specimen.getUnitID() != null)
+				{
+					dataRow.add(specimen.getUnitID());
+				}
 				dataRow.add(specimen.getCollectionType());
 				dataRow.add(specimen.getSourceInstitutionID());
 				dataRow.add(specimen.getRecordBasis());
@@ -557,7 +391,8 @@ public class DwCAExporter
 				dataRow.add(specimen.getGatheringEvent().getLocality());
 				dataRow.add(specimen.getGatheringEvent().getProvinceState());
 				dataRow.add(specimen.getGatheringEvent().getIsland());
-				dataRow.add(specimen.getGatheringEvent().getCity()); // ToDo: Moet County worden.
+				/* ToDo: GetCity moet County worden. */
+				dataRow.add(specimen.getGatheringEvent().getCity());
 				if (specimen.getGatheringEvent().getDateTimeBegin() != null)
 				{
 					SimpleDateFormat datetimebegin = new SimpleDateFormat("yyyy-MM-dd");
@@ -574,7 +409,8 @@ public class DwCAExporter
 				dataRow.add(specimen.getGatheringEvent().getAltitudeUnifOfMeasurement());
 				if (specimen.getGatheringEvent().getGatheringPersons() != null)
 				{
-					dataRow.add(specimen.getGatheringEvent().getGatheringPersons().iterator().next().getFullName());
+					dataRow.add(specimen.getGatheringEvent().getGatheringPersons().iterator().next()
+							.getFullName());
 				}
 				if (specimen.getGatheringEvent().getSiteCoordinates() != null)
 				{
@@ -590,7 +426,6 @@ public class DwCAExporter
 						dataRow.add(Double.toString(specimen.getGatheringEvent().getSiteCoordinates()
 								.iterator().next().getLatitudeDecimal()));
 					}
-
 				}
 				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName()
 						.getAuthorshipVerbatim());
@@ -598,13 +433,8 @@ public class DwCAExporter
 						.getSpecificEpithet());
 				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName()
 						.getFullScientificName());
-
-//				if(specimen.getIdentifications().iterator().next().getScientificName().get != null)
-//				{
-//					dataRow.add(specimen.getGatheringEvent().getGatheringPersons().iterator().next().getFullName()); // ToDo: ????
-//				}
-				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName().getAuthorshipVerbatim());
-
+				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName()
+						.getAuthorshipVerbatim());
 				if (specimen.getIdentifications().iterator().next().getDateIdentified() != null)
 				{
 					SimpleDateFormat dateidentified = new SimpleDateFormat("yyyy-MM-dd");
@@ -612,30 +442,28 @@ public class DwCAExporter
 							.getDateIdentified());
 					dataRow.add(dateiden);
 				}
-				
-				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName().getGenusOrMonomial());
-				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName().getInfraspecificEpithet());
-				dataRow.add(specimen.getIdentifications().iterator().next().getSystemClassification().iterator().next().getRank());
+				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName()
+						.getGenusOrMonomial());
+				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName()
+						.getInfraspecificEpithet());
+				dataRow.add(specimen.getIdentifications().iterator().next().getSystemClassification()
+						.iterator().next().getRank());
 				dataRow.add(specimen.getIdentifications().iterator().next().getScientificName().getSubgenus());
-				
 				/**
 				 * adding data row
 				 */
 				filewriter.WriteRow(dataRow);
 			}
-			filewriter.close();
-
 		} catch (IOException e)
 		{
-			// TODO Auto-generated catch block
 			e.printStackTrace();
 		} finally
-		{
-			if (inputStream != null)
+		{ /* Close the filewriter */
+			if (filewriter != null)
 			{
 				try
 				{
-					inputStream.close();
+					filewriter.close();
 				} catch (IOException e)
 				{
 					e.printStackTrace();
